Added front image

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,1 +1,1 @@
-<img src='a-holiday-hut-by-the-sea.jpg'/>
+<img style="width: 600px;margin:auto" src="https://images.freeimages.com/images/large-previews/5f5/a-holiday-hut-by-the-sea-1638697.jpg"/>
