--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,2 +1,12 @@
 <h1>Houses#index</h1>
 <p>Find me in app/views/houses/index.html.erb</p>
+<% @houses.each do |house| %>
+  <% if house.owner == current_user %>
+    <p><%=house.name%> <%= link_to "Show/Edit #{house.name}", house_path(house)%></p>
+  <% else %>
+    <p><%=house.name%> <%= link_to "View", house_path(house)%></p>
+  <% end %>
+<% end %>
+<% if current_user.owner == true %>
+  <%= link_to "Add A New House", new_house_path %>
+<% end %>
