--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,3 +2,4 @@
 <p>Name: <%= user.name %></p>
 <p>Account Balance: $<%= user.budget %></p>
 <p>Guests in the party: <%= user.guests %></p>
+<p>Pets: <%= "Yes" if user.pets %><%= "No" if !user.pets %></p>
