--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,9 @@
 <label>What is your account balance(US$)?</label><br>
-<%= text_field_tag :'user[budget]' %><br>
+<%= text_field_tag :'user[balance]', value=@user.balance%><br>
 
 <label>How many guests are there in your party?</label><br>
-<%= text_field_tag :'user[guests]' %><br>
+<%= text_field_tag :'user[guests]', value=@user.guests%><br>
 
 <label>Check box if you have pets</label>
-<%= check_box_tag :'user[pets]' %><br>
+<%= hidden_field_tag :'user[pets]', false %>
+<%= check_box_tag :'user[pets]', true, checked=@user.pets %><br>
