--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,4 +7,5 @@
 <% if @user.owner == true %>
 <p>OWNER</p>
 <% end %>
-<%= link_to "See houses", "/houses" %>
+<%= link_to "See Houses", "/houses" %> &nbsp&nbsp&nbsp&nbsp
+<%= link_to "Edit Profile", edit_user_path(@user) %>
