--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -3,10 +3,12 @@
 
 <p>Find me in app/views/houses/index.html.erb</p>
 <% @houses.each do |house| %>
+
+  <p><%=house.name%> , max <%=house.max_guests%> guests, $<%=house.price_per_night%> per night, Pets allowed: <%="Yes" if house.pets_allowed%><%="No" if !house.pets_allowed%>
   <% if house.owner == current_user %>
-    <p><%=house.name%> <%= link_to "Show/Edit #{house.name}", house_path(house)%></p>
+    <%= link_to "Show/Edit #{house.name}", house_path(house)%></p>
   <% else %>
-    <p><%=house.name%> , max <%=house.max_guests%> guests, $<%=house.price_per_night%> per night, Pets allowed: <%="Yes" if house.pets_allowed%><%="No" if !house.pets_allowed%> <%= link_to "View", house_path(house)%></p>
+    <%= link_to "View", house_path(house)%></p>
   <% end %>
 <% end %>
 <% if current_user.owner == true %>
