--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -14,12 +14,13 @@
 <%= form_tag stays_path, method: :post  do %>
 <%= hidden_field_tag(:guest_id, current_user.id) %>
 <%= hidden_field_tag(:house_id, @house.id) %>
-<% if current_user.owner == true %>
+<% if @house.owner == current_user %>
   <%= link_to "Edit House", edit_house_path(@house)%>
-<% else %>
+<% elsif !current_user.owner %>
   <label>How many days are you going to stay?</label>
   <%= text_field_tag :days %><br>
   <%= submit_tag "Book This House"%>
 <% end %>
 
 <% end %>
+<%= link_to "Back To All Houses", houses_path %>
