--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,11 @@
 <p><%= @message %></p>
 <% end %>
 
-<%= render partial: 'form', locals: {user: @user} %>
+<p>Name: <%= @user.name %></p>
 <% if @user.owner == true %>
-<p>OWNER</p>
+  <p>OWNER</p>
+<% else %>
+  <%= render partial: 'form', locals: {user: @user} %>
+  <%= link_to "Edit Profile", edit_user_path(@user) %>&nbsp&nbsp&nbsp&nbsp
 <% end %>
-<%= link_to "See Houses", "/houses" %> &nbsp&nbsp&nbsp&nbsp
-<%= link_to "Edit Profile", edit_user_path(@user) %>
+<%= link_to "See Houses", "/houses" %>
