Added OmiAuth with Facebook

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,6 @@
+<label>Email: </label><br>
+<%= text_field_tag :'user[email]', value=@user.email%><br>
+
 <label>What is your account balance(US$)?</label><br>
 <%= text_field_tag :'user[balance]', value=@user.balance%><br>
 
