--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,9 @@
 <% end %>
 
 <p>Name: <%= @user.name %></p>
+<% if @user.image %>
+    <img src="<%= @user.image %>">
+<% end %>
 <% if @user.owner == true %>
   <p>OWNER</p>
 <% else %>
