Started on Validations

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,3 +12,7 @@
 
   <%= submit_tag "Create User" %>
 <% end %>
+
+<br><p>------- OR -------</p>
+
+<p><%= link_to('Sign up with Facebook for a renter account!', '/auth/facebook') %></p>
