--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,4 +13,4 @@
   <%= render partial: 'form', locals: {user: @user} %>
   <%= link_to "Edit Profile", edit_user_path(@user) %>&nbsp&nbsp&nbsp&nbsp
 <% end %>
-<%= link_to "See Houses", "/houses" %>
+<%= link_to "See All Houses", "/houses" %>
