--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,6 @@
 <% if @message %>
 <%= @message %>
 <% end %>
-
 <% if @house && @message.include?("Thank you")%>
-    &nbsp&nbsp<%= link_to "Write a review", new_user_review_path(@user), @house %>
+    &nbsp&nbsp<%= link_to "Write a review", new_user_review_path(@user, house_id: "#{@house}")%>
 <% end %>
