More Nested Attributes

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Reviews#index</h1>
+<h1>All reviews</h1>
+
 <p>Find me in app/views/reviews/index.html.erb</p>
+
+
+<% @reviews.each do |review| %>
+  <%= render 'review' %>
+<% end %>
