--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -4,12 +4,13 @@
 
 <p>Price Per Night: $<%=@house.price_per_night%></p>
 <p>Max guests: <%=@house.max_guests%></p>
-<p>Cleaniless rating: <%=@house.cleanliness_rating%></p>
-<p>Location rating: <%=@house.location_rating%></p>
-<p>Value rating: <%=@house.value_rating%></p>
+<p>Overall Cleaniless rating: <%=@house.cleanliness_rating%></p>
+<p>Overall Location rating: <%=@house.location_rating%></p>
+<p>Overall Value rating: <%=@house.value_rating%></p>
 <p>Pets allowed: <%="Yes" if @house.pets_allowed%><%="No" if !@house.pets_allowed%></p>
+<p>Total number of reviews:<%=@house.reviews.count%>
+<%= link_to "See all reviews", house_reviews_path(@house)%></p><br><br>
 
-<%=@house.reviews_count%> reviews <br><br>
 
 <%= form_tag stays_path, method: :post  do %>
 <%= hidden_field_tag(:guest_id, current_user.id) %>
