--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Reviews#edit</h1>
 <p>Find me in app/views/reviews/edit.html.erb</p>
 <%= form_tag user_review_path(@review), method: :patch do%>
-<%= render 'review' %>
+<%= render partial: 'review', locals: {review: @review} %>
 <%= submit_tag "Update Review" %>
 <% end %>
 <%= link_to "Back to My Profile", current_user %>
