--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,5 +1,6 @@
-<h2>My review of <%= review.house.name %></h2>
-<p>by <%=review.user.name %></p>
+<h2><%= review.title %></h2>
+<p><%= review.house.name %></p>
+<p>by <%=review.user.name %> on <%=review.created_at %></p>
 <p>Cleanliness Rating: <%= review.cleanliness_rating %></p>
 <p>Cleanliness Rating: <%= review.location_rating %></p>
 <p>Cleanliness Rating: <%= review.value_rating %></p>
