--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -6,6 +6,10 @@
 <h3>5 - the best</h3>
 
 <%= form_tag user_reviews_path do %>
+
+  <br><label>Title:</label>
+  <%= text_field_tag :'review[title]', nil, class: 'input-large'%><br>
+
   <label>Cleanliness Rating: </label>&nbsp&nbsp
   <%= radio_button_tag(:'review[cleanliness_rating]', "1") %> 1&nbsp&nbsp
   <%= radio_button_tag(:'review[cleanliness_rating]', "2") %> 2&nbsp&nbsp
