--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -22,7 +22,7 @@
 <%= hidden_field_tag(:guest_id, current_user.id) %>
 <%= hidden_field_tag(:house_id, @house.id) %>
 <% if @house.owner == current_user %>
-  <%= link_to "Edit House", edit_house_path(@house)%><br>
+  <%= link_to "Edit House", edit_house_path(@house)%>&nbsp&nbsp
 
   <%= link_to 'Delete House', house_path(@house),
               method: :delete,
