--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -5,7 +5,7 @@
 <h3>1 - the worst</h3>
 <h3>5 - the best</h3>
 
-<%= form_tag user_reviews_path do %>
+<%= form_tag house_reviews_path do %>
 
   <br><label>Title:</label>
   <%= text_field_tag :'review[title]', nil, class: 'input-large'%><br>
